# larryAgent

./: pyproject.toml
larryagent/: main.py
larryagent/commands/: init.py  run.py
larryagent/templates/aidelivery/: README.md
larryagent/templates/aidelivery/capabilities/_base/: base-contract.yaml
larryagent/templates/aidelivery/capabilities/api-design/: SKILL.md  contract.yaml
larryagent/templates/aidelivery/capabilities/backend-implementation/: SKILL.md  contract.yaml
larryagent/templates/aidelivery/capabilities/code-review-request/: SKILL.md  contract.yaml
larryagent/templates/aidelivery/capabilities/design-generation/: SKILL.md  contract.yaml
larryagent/templates/aidelivery/capabilities/frontend-implementation/: SKILL.md  contract.yaml
larryagent/templates/aidelivery/capabilities/integration-test/: SKILL.md  (+1 more)
larryagent/templates/aidelivery/compiler/: capability_resolver.py  contract_merger.py  governance_injector.py  workflow_builder.py
larryagent/templates/aidelivery/evidence/: collector.py  validator.py
larryagent/templates/aidelivery/governance/: definition-of-done.md  delivery-policy.md  project-policy.md  testing-policy.md
larryagent/templates/aidelivery/trace/: otel_adapter.py  tracer.py
larryagent/templates/aidelivery/workflow-templates/: bugfix-delivery.workflow.md  bugfix-delivery.workflow.yaml  feature-delivery.workflow.md  feature-delivery.workflow.yaml  refactor-delivery.workflow.md  refactor-delivery.workflow.yaml
larryagent/templates/project_root/: AGENTS.md
larryagent/templates/project_root/.github/: copilot-instructions.md
(+49 files in other folders)
