[project]
name = "larryagent"
version = "0.1.0"
description = "AI Delivery Control Plane CLI"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12.0"
]

[project.scripts]
larryagent = "larryagent.main:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["larryagent"]

[tool.setuptools.package-data]
larryagent = ["templates/**/*"]